Making some changes to the base set up.

--- a/_/_css/_scss/_base/_placeholders.scss
+++ b/_/_css/_scss/_base/_placeholders.scss
@@ -1,197 +1,8 @@
-//----------------------------------------------------------------
-//	Font Size
-//----------------------------------------------------------------
-@mixin fontsize($value) {
-
-    @if $pxSupport == "true" {
-    	font-size: ($value) + px;
-		font-size: ($value / 10) + rem;
-    }
-
-    @else {
-		font-size: ($value / 10) + rem;
-    }
-}
-
-
-//----------------------------------------------------------------
-//	Font Family
-//----------------------------------------------------------------
-@mixin font($fontName, $fontLongname) {
-
-	@font-face {
-		font-family: $fontName;
-		src: url("/css/fonts/" + $fontLongname + "/" + $fontLongname + ".eot");
-		src: url("/css/fonts/" + $fontLongname + "/" + $fontLongname + ".eot?#iefix") format("embedded-opentype"),
-			 url("/css/fonts/" + $fontLongname + "/" + $fontLongname + ".woff") format("woff"),
-			 url("/css/fonts/" + $fontLongname + "/" + $fontLongname + ".ttf") format("truetype"),
-			 url("/css/fonts/" + $fontLongname + "/" + $fontLongname + ".svg#" + $fontName + "") format("svg");
-	}	
-}
-
-//----------------------------------------------------------------
-//	Border Radius
-//----------------------------------------------------------------
-@mixin borderRadius($values...) {
-
-	$max: length($values);
-	$pxValues: '';
-	$remValues: '';
-
-	@for $i from 1 through $max {
-		$value: prop-count(nth($values, $i));
-		$pxValues: #{$pxValues + $value}px;
-
-		@if $i < $max {
-			$pxValues: #{$pxValues + " "};
-		}
-	} 
-
-	@for $i from 1 through $max {
-		$value: prop-count(nth($values, $i));
-		$remValues: #{$remValues + $value/10}rem;
-
-		@if $i < $max {
-			$remValues: #{$remValues + " "};
-		}
-	}
-
-	@if $pxSupport == "true" {
-    	-webkit-border-radius: $pxValues;
-	   	   -moz-border-radius: $pxValues;
-				border-radius: $pxValues;
-		-webkit-border-radius: $remValues;
-	   	   -moz-border-radius: $remValues;
-				border-radius: $remValues;
-    }
-
-    @else {
-		-webkit-border-radius: $remValues;
-	   	   -moz-border-radius: $remValues;
-				border-radius: $remValues;
-    }
-}
-
-
-//----------------------------------------------------------------
-//	Opacity
-//----------------------------------------------------------------
-@mixin opacity($opacity) {
-	$opacity-ie: $opacity * 100;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity="$opacity * 100")";
-	filter: alpha(opacity=$opacity-ie);
-	opacity: $opacity;
-	zoom: 1;
-}
-
-
-//----------------------------------------------------------------
-//	Property & Values
-//----------------------------------------------------------------
-@function prop-count($num) {
-	@return $num / ($num * 0 + 1);
-}
-
-@mixin property($styleProperty, $values...) {
-	$max: length($values);
-	$pxValues: '';
-	$remValues: '';
-
-	@for $i from 1 through $max {
-		$value: prop-count(nth($values, $i));
-		$pxValues: #{$pxValues + $value}px;
-
-		@if $i < $max {
-			$pxValues: #{$pxValues + " "};
-		}
-	} 
-
-	@for $i from 1 through $max {
-		$value: prop-count(nth($values, $i));
-		$remValues: #{$remValues + $value/10}rem;
-
-		@if $i < $max {
-			$remValues: #{$remValues + " "};
-		}
-	}
-
-	@if $pxSupport == "true" {
-    	#{$styleProperty}: $pxValues; 
-		#{$styleProperty}: $remValues; 
-    }
-
-    @else {
-		#{$styleProperty}: $remValues; 
-    }
-}
-
-
-//----------------------------------------------------------------
-//	Transition
-//----------------------------------------------------------------
-@mixin transition($effect...) {
-	-webkit-transition: $effect;
-   	   -moz-transition: $effect;
-			transition: $effect;
-}
-
-
-//----------------------------------------------------------------
-//	Image with high res version
-//----------------------------------------------------------------
-@mixin backgroundImage($fileName, $ext, $vars, $highRes:"false") {
-
-	@if $highRes == "true" {
-    	background: url(/_/_images/#{$fileName}.#{$ext}) $vars;
-		
-
-			  /* Retina-specific stuff here */
-
-
-	}
-
-    @else {
-		background: url(/_/_images/#{$fileName}.#{$ext}) $vars;
-    }
-}
-
-
-//----------------------------------------------------------------
-//	Border
-//----------------------------------------------------------------
-@mixin border($width, $style, $color, $side:"false") {
-
-	@if $pxSupport == "true" {
-    	
-    	@if $side == "false" {
-			border: ($width)+px $style $color;
-			border: ($width / 10)+rem $style $color;
-		}
-
-		@else {
-			border#{-$side}: ($width)+px $style $color;
-			border#{-$side}: ($width / 10)+rem $style $color;
-		}
-    }
-
-    @else {
-		
-		@if $side == "false" {
-			border: ($width / 10)+rem $style $color;
-		}
-
-		@else {
-			border#{-$side}: ($width / 10)+rem $style $color;
-		}
-    }
-}
-
-
-//----------------------------------------------------------------
-//	Browser Pre-Fix
-//----------------------------------------------------------------
-@mixin prefix($attr, $value) {
-	-webkit-border-#{$attr}: $value;
-   	   -moz-border-#{$attr}: $value;
-			border-#{$attr}: $value;
+%circle {
+	-webkit-background-clip: padding-box;
+	   -moz-background-clip: padding;
+			background-clip: padding-box;
+	-webkit-border-radius: 50%;
+   	   -moz-border-radius: 50%;
+			border-radius: 50%;
 }
