--- a/_/_css/_scss/_base/_variables.scss
+++ b/_/_css/_scss/_base/_variables.scss
@@ -28,3 +28,6 @@ $largeScreen: 			1000;
 //----------------------------------------------------------------
 $titleColor: 			#333;
 $bodyColor: 			#777;
+
+$black: 				#000;
+$white: 				#fff;
