--- a/_/_css/_scss/style.scss
+++ b/_/_css/_scss/style.scss
@@ -1,3 +1,11 @@
+/* 
+	Built with Origin by Dave J. Fox
+	Twitter: 	@davejfox
+	Github: 	davejfox
+
+	Free to use, if you make something cool show me! 
+*/
+
 // BASE STYLES
 // ---------------------------------------------------------
 @import "_base/_variables.scss";
@@ -6,12 +14,13 @@
 @import "_base/_reset.scss";
 @import "_base/_grid.scss";
 @import "_base/_typography.scss";
-@import "_base/_proto.scss"; // Uncomment this if you want basic styles for prototpying. 
+@import "_base/_common.scss";
+//@import "_base/_proto.scss";  // Uncomment this if you want basic styles for prototpying. 
 
 
 // VENDOR 
 // ---------------------------------------------------------
-//@import "vendor/_name-here.scss";
+//@import "_vendor/_name-here.scss";
 
 
 // MODULES
