--- a/_/_css/_scss/_base/_variables.scss
+++ b/_/_css/_scss/_base/_variables.scss
@@ -18,10 +18,9 @@ $totalColumns: 			12;
 $defaultFloat: 			left;
 $oppositeDirection: 	right;
 
-$xsmallScreen:			0;
-$smallScreen:			480;
-$mediumScreen:			800;
-$largeScreen: 			1000;
+// Screen Size Name: 	"kick-in" size;
+$mediumScreen:			480;
+$largeScreen: 			800;
 
 
 //----------------------------------------------------------------
