--- a/_/_css/style.css
+++ b/_/_css/style.css
@@ -119,6 +119,14 @@ samp {
   font-family: monospace, monospace;
   font-size: 1.4rem; }
 
+h1, h2, h3, h4, h5, h6,
+.alpha, .beta, .gamma, .delta, .epsilon, .zeta {
+  color: #333333; }
+
+p,
+li {
+  color: #777777; }
+
 .row {
   width: 100%;
   margin: 0 auto;
@@ -952,18 +960,44 @@ samp {
 
   .large-block-grid-12 > li:nth-of-type(12n+1) {
     clear: both; } }
-.fl {
-  float: left; }
-
-.fr {
-  float: right; }
-
 .clearfix:after {
   content: "";
   width: 100%;
   height: 0;
   display: block;
   clear: both; }
+
+.circle {
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
+  -ms-background-clip: padding-box;
+  background-clip: padding-box;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  overflow: hidden; }
+
+.has-shadow {
+  box-shadow: 0 2px 3px #ccc;
+  box-shadow: 0 0.2rem 0.3rem #ccc; }
+
+a {
+  outline: none; }
+
+iframe,
+object,
+embed {
+  max-width: 100%; }
+
+.overflow-hidden {
+  overflow: hidden; }
+
+.fl {
+  float: left; }
+
+.fr {
+  float: right; }
 
 .text-center {
   text-align: center; }
@@ -974,6 +1008,20 @@ samp {
 .text-right {
   text-align: right; }
 
+.v-wrapper {
+  display: table;
+  height: 100%;
+  width: 100%; }
+  .v-wrapper .v-inner {
+    display: table-cell;
+    height: 100%;
+    vertical-align: middle; }
+
+.has-radius {
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  border-radius: 0.3rem; }
+
 .bg-white {
   background: white; }
 
@@ -982,19 +1030,41 @@ samp {
   .bg-black * {
     color: white; }
 
-.border-white {
-  border: 0.1rem solid white; }
+[class*="border-"] {
+  border: 0.1rem solid transparent; }
 
-.border-black {
-  border: 0.1rem solid black; }
+[class*="top-border"] {
+  border-top: 0.1rem solid transparent;
+  border-bottom: 0;
+  border-left: 0;
+  border-right: 0; }
 
-h1, h2, h3, h4, h5, h6,
-.alpha, .beta, .gamma, .delta, .epsilon, .zeta {
-  color: #333333; }
+[class*="bottom-border"] {
+  border-bottom: 0.1rem solid transparent;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0; }
 
-p,
-li {
-  color: #777777; }
+[class*="left-border"] {
+  border-left: 0.1rem solid transparent;
+  border-top: 0;
+  border-bottom: 0;
+  border-right: 0; }
+
+[class*="right-border"] {
+  border-right: 0.1rem solid transparent;
+  border-top: 0;
+  border-bottom: 0;
+  border-left: 0; }
+
+[class*="thick-"] {
+  border-width: 0.2rem; }
+
+[class*="xthick-"] {
+  border-width: 0.4rem; }
+
+[class*="border-white"] {
+  border-color: #fff; }
 
 ::-webkit-input-placeholder {
   opacity: 1; }
