Working on a little re-factoring and optimization.

--- a/_/css/scss/base/_common.scss
+++ b/_/css/scss/base/_common.scss
@@ -15,8 +15,8 @@
 
 .circle,
 %circle {
-    @include prefix(background-clip, padding-box);
-    @include prefix(border-radius, 50%);
+    @include pre(background-clip, padding-box);
+    @include pre(border-radius, 50%);
     overflow: hidden;
 }
 
@@ -81,7 +81,7 @@ embed {
 }
 
 .has-radius {
-    @include borderRadius(3);
+    @include radius(3);
 }
 
 
