A little work on the proto.

--- a/_/css/scss/base/_proto.scss
+++ b/_/css/scss/base/_proto.scss
@@ -53,3 +53,21 @@ ol {
 
     }
 }
+
+.bg-grey {
+	background: #ccc;
+}
+
+
+
+
+#demo {
+	
+	#grid-demo {
+
+		[class*="-only"] {
+			@include fontSize(10);
+			color: #000;
+		}
+	}
+}
