--- a/_/css/scss/base/_grid.scss
+++ b/_/css/scss/base/_grid.scss
@@ -85,7 +85,7 @@
 
 @mixin gridSize($sizeName, $kickIn) {
 
-    @media only screen and (min-width: (($kickIn + 1) + px)) {
+    @media only screen and (min-width: ($kickIn + px)) {
 
         .#{$sizeName}-text-center {
             text-align: center;
@@ -152,15 +152,15 @@
 //  Grid Sizes
 //----------------------------------------------------------------
 @media only screen {
-    .small-text-center {
+    .xsmall-text-center {
         text-align: center;
     }
 
-    .small-text-left {
+    .xsmall-text-left {
         text-align: left;
     }
 
-    .small-text-right {
+    .xsmall-text-right {
         text-align: right;
     }
 
@@ -168,13 +168,13 @@
     .column,
     .columns {
         
-        &.small-centered {
+        &.xsmall-centered {
             margin-left: auto;
             margin-right: auto;
             float: none; 
         }
 
-        &.small-uncentered {
+        &.xsmall-uncentered {
             margin-left: 0;
             margin-right: 0;
             float: left;
@@ -186,30 +186,31 @@
     }
 
     @for $i from 1 through $totalColumns {
-        .small#{-$i} { @include grid-column($columns:$i); }
+        .xsmall#{-$i} { @include grid-column($columns:$i); }
     }
 
     @for $i from 1 through $totalColumns {
-        .small-push#{-$i} { @include grid-column($push:$i); }
+        .xsmall-push#{-$i} { @include grid-column($push:$i); }
     }
 
     @for $i from 1 through $totalColumns {
-        .small-pull#{-$i} { @include grid-column($pull:$i); }
+        .xsmall-pull#{-$i} { @include grid-column($pull:$i); }
     }
 
     @for $i from 1 through $totalColumns {
-        .small-block-grid#{-$i} > li {
+        .xsmall-block-grid#{-$i} > li {
             width: (#{100/$i})+("%");
         }
-        .small-block-grid#{-$i} > li:nth-of-type(n) {
+        .xsmall-block-grid#{-$i} > li:nth-of-type(n) {
             clear: none;   
         }
-        .small-block-grid#{-$i} > li:nth-of-type(#{$i}n+1) {
+        .xsmall-block-grid#{-$i} > li:nth-of-type(#{$i}n+1) {
             clear: both; 
         }
     }
 }
 
 // Additional grid sizes can be added here.
+@include gridSize("small", $smallScreen);
 @include gridSize("medium", $mediumScreen);
 @include gridSize("large", $largeScreen);
