--- a/_/css/scss/base/_variables.scss
+++ b/_/css/scss/base/_variables.scss
@@ -21,7 +21,8 @@ $defaultFloat: 			left;
 $oppositeDirection: 	right;
 
 // Screen Size Name: 	"kick-in" size;
-$mediumScreen:			768;
+$smallScreen:			641;
+$mediumScreen:			769;
 $largeScreen: 			1025;
 
 
